<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeaturesListViewController" customModule="SwiftyToggler" customModuleProvider="target">
            <connections>
                <outlet property="closeButtonHeightConstraint" destination="nfC-Wn-9cy" id="Szz-jZ-HuW"/>
                <outlet property="placeholderView" destination="7KN-Ba-A7A" id="4Ta-bq-tny"/>
                <outlet property="tableContainerView" destination="Yiv-wt-5WL" id="Kls-NC-zmN"/>
                <outlet property="tableView" destination="Qhf-Fp-ysK" id="uB4-IH-Qx2"/>
                <outlet property="titleLabelHeightConstaint" destination="UBl-pz-gGx" id="tzb-HQ-AE5"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Features List" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lxm-1v-Rek" userLabel="TitleLabel">
                    <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                    <accessibility key="accessibilityConfiguration" identifier="features_list_title"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="UBl-pz-gGx"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yiv-wt-5WL" userLabel="TableContainerView">
                    <rect key="frame" x="0.0" y="70" width="375" height="553"/>
                    <subviews>
                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qhf-Fp-ysK">
                            <rect key="frame" x="0.0" y="0.0" width="375" height="553"/>
                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <outlet property="dataSource" destination="-1" id="x54-fK-wFe"/>
                            </connections>
                        </tableView>
                    </subviews>
                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                    <constraints>
                        <constraint firstAttribute="bottom" secondItem="Qhf-Fp-ysK" secondAttribute="bottom" id="2ja-8O-SDT"/>
                        <constraint firstAttribute="trailing" secondItem="Qhf-Fp-ysK" secondAttribute="trailing" id="Lu7-fZ-IrE"/>
                        <constraint firstItem="Qhf-Fp-ysK" firstAttribute="top" secondItem="Yiv-wt-5WL" secondAttribute="top" id="lre-Wn-ZoT"/>
                        <constraint firstItem="Qhf-Fp-ysK" firstAttribute="leading" secondItem="Yiv-wt-5WL" secondAttribute="leading" id="pcf-dl-VC5"/>
                    </constraints>
                </view>
                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I4J-Qu-IcG" userLabel="CloseButton">
                    <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                    <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="nfC-Wn-9cy"/>
                    </constraints>
                    <state key="normal" title="Close"/>
                    <connections>
                        <action selector="closeButtonDidTap:" destination="-1" eventType="touchUpInside" id="8OC-bz-s8N"/>
                    </connections>
                </button>
            </subviews>
            <accessibility key="accessibilityConfiguration" identifier="features_list_view">
                <accessibilityTraits key="traits" notEnabled="YES"/>
                <bool key="isElement" value="NO"/>
            </accessibility>
            <constraints>
                <constraint firstAttribute="bottom" secondItem="I4J-Qu-IcG" secondAttribute="bottom" id="3A2-zZ-FeV"/>
                <constraint firstItem="I4J-Qu-IcG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="CV1-0h-O7G"/>
                <constraint firstItem="Lxm-1v-Rek" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Hsr-AA-fJd"/>
                <constraint firstItem="I4J-Qu-IcG" firstAttribute="top" secondItem="Yiv-wt-5WL" secondAttribute="bottom" id="IYt-qI-SJq"/>
                <constraint firstItem="Yiv-wt-5WL" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="IZO-gw-6SJ"/>
                <constraint firstAttribute="trailing" secondItem="I4J-Qu-IcG" secondAttribute="trailing" id="NxH-Z9-VwD"/>
                <constraint firstItem="Lxm-1v-Rek" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="hVP-UT-PrI"/>
                <constraint firstAttribute="trailing" secondItem="Yiv-wt-5WL" secondAttribute="trailing" id="kxC-re-74O"/>
                <constraint firstAttribute="trailing" secondItem="Lxm-1v-Rek" secondAttribute="trailing" id="nij-na-34L"/>
                <constraint firstItem="Yiv-wt-5WL" firstAttribute="top" secondItem="Lxm-1v-Rek" secondAttribute="bottom" id="ySX-B7-HTj"/>
            </constraints>
            <point key="canvasLocation" x="-460.5" y="-193.5"/>
        </view>
        <view contentMode="scaleToFill" id="7KN-Ba-A7A" userLabel="PlaceholderView">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Features Available" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hT7-nb-jJD">
                    <rect key="frame" x="0.0" y="321" width="375" height="25.5"/>
                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
            </subviews>
            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
            <constraints>
                <constraint firstItem="hT7-nb-jJD" firstAttribute="leading" secondItem="7KN-Ba-A7A" secondAttribute="leading" id="2i6-F5-9Ck"/>
                <constraint firstAttribute="trailing" secondItem="hT7-nb-jJD" secondAttribute="trailing" id="I38-ek-RMQ"/>
                <constraint firstItem="hT7-nb-jJD" firstAttribute="centerY" secondItem="7KN-Ba-A7A" secondAttribute="centerY" id="XrZ-9n-PTT"/>
            </constraints>
            <nil key="simulatedStatusBarMetrics"/>
            <point key="canvasLocation" x="143" y="-201"/>
        </view>
    </objects>
</document>
