...
	@IBOutlet private weak var closeButtonHeightConstraint: NSLayoutConstraint!
	@IBOutlet private weak var titleLabelHeightConstaint: NSLayoutConstraint!

	override func viewDidLoad() {
		super.viewDidLoad()

		tableView.accessibilityIdentifier = "features_list_table_view"

		registerTableCell()
		tableView.reloadData()

        updatePlaceholderVisibility()
		updateCloseButtonVisibility()
...
